Fixing icon size on safari

--- a/src/styles/navSecondary.css
+++ b/src/styles/navSecondary.css
@@ -27,12 +27,10 @@ nav {
 
 .nav-icon {
   height: 14px;
-  width: 100%;
 }
 
 .nav-icon.github {
   height: 13px;
-  width: 100%;
 }
 
 .hover-outline {
@@ -46,7 +44,7 @@ nav {
   transform: translate(-50%, -50%);
   pointer-events: none;
   z-index: -1;
-  transition: all .15s cubic-bezier(.6,0.5,.53,2.5);
+  transition: all 0.15s cubic-bezier(0.6, 0.5, 0.53, 2.5);
 }
 
 .nav-left a:hover .hover-outline,
